--- a/snippets/product-thirty-day-video-reviews.liquid
+++ b/snippets/product-thirty-day-video-reviews.liquid
@@ -4,11 +4,15 @@
     <img class="green-leaf" src="{{ 'thirty-day-green-leaf.png' | asset_url }}" width="142" height="143" alt="green leaf">
   
   <div class="container">
-    <h2>{{ maintitle }}</h2>
     <div class="video-reviews swiper">
       <div class="swiper-button-prev"></div>
       <div class="swiper-wrapper">
         <div class="swiper-slide">
+          <div class="review-quote">
+            <img src="{{ 'thirty-day-product-quote-icon.png' | asset_url }}" width="72" height="63" alt="" loading="lazy">
+            <p class="quote-content">From the first bottle it has been amazing. I feel rewarded for my hard work</p>
+            <p class="quote-author">Jo R.</p>
+          </div>
           <div class="video-review">
             <div class="review-video">
               <iframe src="https://player.vimeo.com/video/770733369?h=fd73eeaa72&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen title="compliant_-_d&#039;gaye_curalin_testimonial (1080p).mp4"></iframe>
@@ -17,6 +21,11 @@
           </div>
         </div>
         <div class="swiper-slide">
+          <div class="review-quote">
+            <img src="{{ 'thirty-day-product-quote-icon.png' | asset_url }}" width="72" height="63" alt="" loading="lazy">
+            <p class="quote-content">From the first bottle it has been amazing. I feel rewarded for my hard work</p>
+            <p class="quote-author">Jo R.</p>
+          </div>
           <div class="video-review">
             <div class="review-video">
               <iframe src="https://player.vimeo.com/video/770743565?h=f39297466f&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen title="compliant_-_Denise_CuraLin_Testimony.mp4"></iframe>
@@ -25,6 +34,11 @@
           </div>
         </div>
         <div class="swiper-slide">
+          <div class="review-quote">
+            <img src="{{ 'thirty-day-product-quote-icon.png' | asset_url }}" width="72" height="63" alt="" loading="lazy">
+            <p class="quote-content">From the first bottle it has been amazing. I feel rewarded for my hard work</p>
+            <p class="quote-author">Jo R.</p>
+          </div>
           <div class="video-review">
             <div class="review-video">
               <iframe src="https://player.vimeo.com/video/662207384?h=f39297466f&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen title="compliant_-_Denise_CuraLin_Testimony.mp4"></iframe>
@@ -33,6 +47,11 @@
           </div>
         </div>
         <div class="swiper-slide">
+          <div class="review-quote">
+            <img src="{{ 'thirty-day-product-quote-icon.png' | asset_url }}" width="72" height="63" alt="" loading="lazy">
+            <p class="quote-content">From the first bottle it has been amazing. I feel rewarded for my hard work</p>
+            <p class="quote-author">Jo R.</p>
+          </div>
           <div class="video-review">
             <div class="review-video">
               <iframe src="https://player.vimeo.com/video/672291614?h=d512ec6cd1&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen title="C - Jo R Testimonial"></iframe>
@@ -40,6 +59,11 @@
           </div>
         </div>
         <div class="swiper-slide">
+          <div class="review-quote">
+            <img src="{{ 'thirty-day-product-quote-icon.png' | asset_url }}" width="72" height="63" alt="" loading="lazy">
+            <p class="quote-content">From the first bottle it has been amazing. I feel rewarded for my hard work</p>
+            <p class="quote-author">Jo R.</p>
+          </div>
           <div class="video-review">
             <div class="review-video">
               <iframe src="https://player.vimeo.com/video/672291580?h=d512ec6cd1&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen title="C - Jo R Testimonial"></iframe>
@@ -47,6 +71,11 @@
           </div>
         </div>
         <div class="swiper-slide">
+          <div class="review-quote">
+            <img src="{{ 'thirty-day-product-quote-icon.png' | asset_url }}" width="72" height="63" alt="" loading="lazy">
+            <p class="quote-content">From the first bottle it has been amazing. I feel rewarded for my hard work</p>
+            <p class="quote-author">Jo R.</p>
+          </div>
           <div class="video-review">
             <div class="review-video">
               <iframe src="https://player.vimeo.com/video/672317874?h=d512ec6cd1&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen title="C - Jo R Testimonial"></iframe>
