--- a/snippets/product-thirty-day-video-reviews.liquid
+++ b/snippets/product-thirty-day-video-reviews.liquid
@@ -263,6 +263,15 @@
     position: relative;
   }
 
+  .thirty-day-video-reviews-section .video-reviews .video-review .review-quote .quote-content {
+    font-family: 'PP Radio Grotesk';
+    font-weight: 700;
+    font-size: 40px;
+    line-height: 60px; 
+    letter-spacing: -0.02em;
+    color: var(--dark-green);
+  }
+
   .thirty-day-video-reviews-section .video-reviews .video-review .review-quote img {
     opacity: .1;
     width: 70px;
@@ -316,6 +325,11 @@
       width: 40px;
       left: -10px;
       top: 0px;
+    }
+
+    .thirty-day-video-reviews-section .video-reviews .video-review .review-quote .quote-content {
+      font-size: 28px;
+      line-height: 30px;
     }
 
     .thirty-day-video-reviews-section .video-reviews .video-review .review-quote .quote-author {
