--- a/snippets/product-thirty-day-video-reviews.liquid
+++ b/snippets/product-thirty-day-video-reviews.liquid
@@ -263,7 +263,7 @@
     position: relative;
   }
 
-  .thirty-day-video-reviews-section .video-reviews .video-review .review-quote .quote-content {
+  .quote-content {
     font-family: 'PP Radio Grotesk';
     font-weight: 700;
     font-size: 40px;
