--- a/snippets/product-thirty-day-video-reviews.liquid
+++ b/snippets/product-thirty-day-video-reviews.liquid
@@ -327,7 +327,7 @@
       top: 0px;
     }
 
-    .thirty-day-video-reviews-section .video-reviews .video-review .review-quote .quote-content {
+   .quote-content {
       font-size: 28px;
       line-height: 30px;
     }
