--- a/snippets/product-thirty-day-video-reviews.liquid
+++ b/snippets/product-thirty-day-video-reviews.liquid
@@ -161,7 +161,7 @@
 
 <script>
   videoReviewsSliderAllInOne = new Swiper('.thirty-day-video-reviews-section .swiper', {
-      slidesPerView: 'auto',
+      slidesPerView: '1',
       spaceBetween: 8, 
       centeredSlides: true,
       grabCursor: true,
@@ -266,8 +266,7 @@
   .quote-content {
     font-family: 'PP Radio Grotesk';
     font-weight: 700;
-    font-size: 40px;
-    line-height: 60px; 
+    font-size: clamp(28px, 2vw, 40px);
     letter-spacing: -0.02em;
     color: var(--dark-green);
   }
@@ -325,11 +324,6 @@
       width: 40px;
       left: -10px;
       top: 0px;
-    }
-
-   .quote-content {
-      font-size: 28px;
-      line-height: 30px;
     }
 
     .thirty-day-video-reviews-section .video-reviews .video-review .review-quote .quote-author {
