--- a/snippets/product-thirty-day-video-reviews.liquid
+++ b/snippets/product-thirty-day-video-reviews.liquid
@@ -10,8 +10,8 @@
         <div class="swiper-slide">
           <div class="review-quote">
             <img src="{{ 'thirty-day-product-quote-icon.png' | asset_url }}" width="72" height="63" alt="" loading="lazy">
-            <p class="quote-content">From the first bottle it has been amazing. I feel rewarded for my hard work</p>
-            <p class="quote-author">Jo R.</p>
+            <p class="quote-content">CuraLin sounded too good to be true. But it works.</p>
+            <p class="quote-author">D’Gaye</p>
           </div>
           <div class="video-review">
             <div class="review-video">
@@ -23,8 +23,8 @@
         <div class="swiper-slide">
           <div class="review-quote">
             <img src="{{ 'thirty-day-product-quote-icon.png' | asset_url }}" width="72" height="63" alt="" loading="lazy">
-            <p class="quote-content">From the first bottle it has been amazing. I feel rewarded for my hard work</p>
-            <p class="quote-author">Jo R.</p>
+            <p class="quote-content">Curalin has really helped me.</p>
+            <p class="quote-author">Denise R.</p>
           </div>
           <div class="video-review">
             <div class="review-video">
@@ -49,8 +49,8 @@
         <div class="swiper-slide">
           <div class="review-quote">
             <img src="{{ 'thirty-day-product-quote-icon.png' | asset_url }}" width="72" height="63" alt="" loading="lazy">
-            <p class="quote-content">From the first bottle it has been amazing. I feel rewarded for my hard work</p>
-            <p class="quote-author">Jo R.</p>
+            <p class="quote-content">Thank you CuraLin, I so appreciate the supplement.</p>
+            <p class="quote-author">Rita Reed</p>
           </div>
           <div class="video-review">
             <div class="review-video">
@@ -61,8 +61,9 @@
         <div class="swiper-slide">
           <div class="review-quote">
             <img src="{{ 'thirty-day-product-quote-icon.png' | asset_url }}" width="72" height="63" alt="" loading="lazy">
-            <p class="quote-content">From the first bottle it has been amazing. I feel rewarded for my hard work</p>
-            <p class="quote-author">Jo R.</p>
+            <p class="quote-content">It’s completely changed my life.
+            Thank you, CuraLin.</p>
+            <p class="quote-author">Paul M.</p>
           </div>
           <div class="video-review">
             <div class="review-video">
@@ -73,8 +74,8 @@
         <div class="swiper-slide">
           <div class="review-quote">
             <img src="{{ 'thirty-day-product-quote-icon.png' | asset_url }}" width="72" height="63" alt="" loading="lazy">
-            <p class="quote-content">From the first bottle it has been amazing. I feel rewarded for my hard work</p>
-            <p class="quote-author">Jo R.</p>
+            <p class="quote-content">I was amazed. My doctor was totally amazed.</p>
+            <p class="quote-author">Sherry L.</p>
           </div>
           <div class="video-review">
             <div class="review-video">
