--- a/snippets/product-thirty-day-video-reviews.liquid
+++ b/snippets/product-thirty-day-video-reviews.liquid
@@ -36,7 +36,7 @@
         <div class="swiper-slide">
           <div class="review-quote">
             <img src="{{ 'thirty-day-product-quote-icon.png' | asset_url }}" width="72" height="63" alt="" loading="lazy">
-            <p class="quote-content">From the first bottle it has been amazing. I feel rewarded for my hard work</p>
+            <p class="quote-content">From the first bottle it has been amazing.</p>
             <p class="quote-author">Jo R.</p>
           </div>
           <div class="video-review">
