--- a/snippets/product-thirty-day-video-reviews.liquid
+++ b/snippets/product-thirty-day-video-reviews.liquid
@@ -281,8 +281,15 @@
   }
 
   .thirty-day-video-reviews-section .video-reviews .video-review .review-quote .quote-author {
-    font-size: 18px;
-    margin-bottom: 0;
+    font-family: 'DM Sans';
+   
+    font-weight: 500;
+    font-size: clamp(16px, 2vw, 20px);
+    line-height: 24px; 
+    letter-spacing: -0.01em;
+    color: var(--dark-green);
+
+
   }
 
   @media screen and (max-width: 768px) {
@@ -326,10 +333,6 @@
       width: 40px;
       left: -10px;
       top: 0px;
-    }
-
-    .thirty-day-video-reviews-section .video-reviews .video-review .review-quote .quote-author {
-      font-size: 14px;
     }
 
  
