--- a/snippets/product-thirty-day-video-reviews.liquid
+++ b/snippets/product-thirty-day-video-reviews.liquid
@@ -280,16 +280,13 @@
     left: 50px;
   }
 
-  .thirty-day-video-reviews-section .video-reviews .video-review .review-quote .quote-author {
-    font-family: 'DM Sans';
-   
+   .quote-author {
+    font-family: 'DM Sans'; 
     font-weight: 500;
     font-size: clamp(16px, 2vw, 20px);
     line-height: 24px; 
     letter-spacing: -0.01em;
     color: var(--dark-green);
-
-
   }
 
   @media screen and (max-width: 768px) {
