--- a/snippets/product-all-in-one-take-control.liquid
+++ b/snippets/product-all-in-one-take-control.liquid
@@ -7,7 +7,8 @@
       <div class="control-sub-wrapper">
       <img class="control-img" src="{{ 'thirty-day-product-whistle.png' | asset_url }}" width="219" height="140" alt="whistle" loading="lazy"> 
       <div class="controller-text">
-        When you finish the 30 days, you’ll be entered into a raffle to win <b>a $200 Amazon Gift Card</b>  as a bonus! Buy something good for your health!
+        Join our 30 day challenge and watch your confidence, determination, and control soar! With our easy-to-use, clinically backed supplement Curalin, delicious meal plan, enjoyable movement regime, and 24/7 support team, your glucose will stay in check. But you won’t stop there! You will feel better, have more energy, and finally be in the driver seat. 
+       <b>Don't wait - a healthier you is a click away!</b> 
       </div>
       </div>
     </div>
@@ -33,14 +34,17 @@
   }
 
   .control-sub-wrapper .control-img {
-    max-width: 20%;
+
   }
 
   .control-sub-wrapper .controller-text {
     font-family: 'DM Sans';
-    font-weight: 400;
-    font-size: clamp(16px, 2vw, 20px);
-    color: var(--dark-green);
+    font-style: normal;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 30px;
+    letter-spacing: -0.01em;
+    color: #404733;
   }
 
 
@@ -58,13 +62,6 @@
     .take-control-wrapper {
       padding-bottom: unset;
       width: 100%;
-    }
-
-
-
-
-    .control-sub-wrapper .control-img {
-      display: none;
     }
 
   }
