--- a/snippets/product-all-in-one-take-control.liquid
+++ b/snippets/product-all-in-one-take-control.liquid
@@ -2,10 +2,14 @@
   <div class="container">
 
     <div class="take-control-wrapper">
-      
-   
       <div class="control-sub-wrapper">
-      <img class="control-img" src="{{ 'thirty-day-product-whistle.png' | asset_url }}" width="219" height="140" alt="whistle" loading="lazy"> 
+        <img class="control-img" src="{{ 'thirty-day-product-whistle.png' | asset_url }}" width="219" height="140" alt="whistle" loading="lazy"> 
+        <div class="whistle-text">
+            Are you ready to take control of your glucose levels and transform into the best version of yourself? 
+        </div>
+      </div>
+   
+      <div class="control-sub-wrapper"> 
       <div class="controller-text">
         Join our 30 day challenge and watch your confidence, determination, and control soar! With our easy-to-use, clinically backed supplement Curalin, delicious meal plan, enjoyable movement regime, and 24/7 support team, your glucose will stay in check. But you won’t stop there! You will feel better, have more energy, and finally be in the driver seat. 
        <b>Don't wait - a healthier you is a click away!</b> 
@@ -30,16 +34,25 @@
 
   .control-sub-wrapper {
     display: flex;
-    padding-bottom: 30px;
+    flex-direction: column;
   }
 
   .control-sub-wrapper .control-img {
 
   }
 
+  .whistle-text {
+    font-family: 'DM Sans';
+    font-weight: 700;
+    font-size: 29px;
+    line-height: 32px;
+    text-align: center;
+    letter-spacing: -0.01em;
+    color: #A86129;
+  }
+
   .control-sub-wrapper .controller-text {
     font-family: 'DM Sans';
-    font-style: normal;
     font-weight: 500;
     font-size: 20px;
     line-height: 30px;
@@ -62,6 +75,19 @@
     .take-control-wrapper {
       padding-bottom: unset;
       width: 100%;
+    }
+
+    .whistle-text {
+      font-size: 23px;
+      line-height: 26px;
+    }
+
+    .control-sub-wrapper .controller-text {
+      
+      font-size: 19px;
+      line-height: 25px;
+      color: #000000;
+     
     }
 
   }
