--- a/snippets/product-all-in-one-take-control.liquid
+++ b/snippets/product-all-in-one-take-control.liquid
@@ -75,6 +75,7 @@
     .take-control-wrapper {
       padding-bottom: unset;
       width: 100%;
+      flex-direction: column;
     }
 
     .whistle-text {
