--- a/snippets/product-all-in-one-take-control.liquid
+++ b/snippets/product-all-in-one-take-control.liquid
@@ -29,12 +29,14 @@
   .take-control-wrapper {
     display: flex;
     justify-content: center;
+    padding: 30px;
     
   }
 
   .control-sub-wrapper {
     display: flex;
     flex-direction: column;
+    width:50%;
   }
 
   .control-sub-wrapper .control-img {
