--- a/snippets/product-all-in-one-take-control.liquid
+++ b/snippets/product-all-in-one-take-control.liquid
@@ -80,6 +80,10 @@
       flex-direction: column;
     }
 
+    .control-sub-wrapper {
+        width: unset;
+    }
+
     .whistle-text {
       font-size: 23px;
       line-height: 26px;
