--- a/snippets/product-all-in-one-take-control.liquid
+++ b/snippets/product-all-in-one-take-control.liquid
@@ -37,6 +37,7 @@
     display: flex;
     flex-direction: column;
     width:50%;
+    align-items: center;
   }
 
   .control-sub-wrapper .control-img {
