--- a/snippets/product-all-in-one-take-control.liquid
+++ b/snippets/product-all-in-one-take-control.liquid
@@ -29,7 +29,7 @@
   .take-control-wrapper {
     display: flex;
     gap: 20px;
-    padding: 30px;
+    padding: 50px 0;
     
   }
 
@@ -76,8 +76,6 @@
 
   @media screen and (max-width: 768px) {
     .take-control-wrapper {
-      padding-bottom: unset;
-      width: 100%;
       flex-direction: column;
     }
 
