--- a/snippets/product-all-in-one-take-control.liquid
+++ b/snippets/product-all-in-one-take-control.liquid
@@ -14,6 +14,9 @@
         Join our 30 day challenge and watch your confidence, determination, and control soar! With our easy-to-use, clinically backed supplement Curalin, delicious meal plan, enjoyable movement regime, and 24/7 support team, your glucose will stay in check. But you won’t stop there! You will feel better, have more energy, and finally be in the driver seat. 
        <b>Don't wait - a healthier you is a click away!</b> 
       </div>
+      <div class="button-wrapper">
+      <a class="cta-btn" href="{{ ctaButtonLink }}">{{ ctaTitle }}</a>
+      </div>
       </div>
     </div>
   </div>
