--- a/snippets/product-all-in-one-take-control.liquid
+++ b/snippets/product-all-in-one-take-control.liquid
@@ -66,6 +66,27 @@
     color: #404733;
   }
 
+  .button-wrapper {
+    display: flex;
+    justify-content: center;
+    padding: 0 20px;
+  }
+
+   .cta-btn {  
+    background: var(--dark-green);
+    border: 1px solid var(--dark-green);
+    font-weight: 700;
+    font-size: clamp(14px, 2vw, 18px);
+    color: var(--white);
+    margin-left: unset;
+
+  }
+
+  .cta-btn:hover {
+    background: var(--regular-green);
+    border: 1px solid  var(--regular-green);
+  }
+
 
 
 
