--- a/snippets/product-all-in-one-take-control.liquid
+++ b/snippets/product-all-in-one-take-control.liquid
@@ -69,7 +69,7 @@
   .button-wrapper {
     display: flex;
     justify-content: center;
-    padding: 0 20px;
+    padding: 20px 0 0;
   }
 
    .cta-btn {  
