--- a/snippets/product-all-in-one-take-control.liquid
+++ b/snippets/product-all-in-one-take-control.liquid
@@ -85,8 +85,8 @@
   }
 
   .cta-btn:hover {
-    background: var(--regular-green);
-    border: 1px solid  var(--regular-green);
+    background: #697938;
+    border: 1px solid  #697938;
   }
 
 
