--- a/snippets/product-all-in-one-easy.liquid
+++ b/snippets/product-all-in-one-easy.liquid
@@ -5,3 +5,30 @@
         </div>
     </div>
 </div>
+
+
+<style>
+    .easy .sub-title {
+      padding-top: 60px;
+    }
+
+    .easy .sub-title h3 {
+      font-family: 'PP Radio Grotesk';
+      font-weight: 700;
+      font-size: 60px;
+      line-height: 35px;
+      color: var(--dark-green);
+      padding-bottom: 30px;
+    }
+
+
+    @media screen and (max-width: 768px) {
+        .easy .sub-title h3 {
+          text-align: left;
+          font-size: 32px;
+          line-height: 35px;
+        }
+      
+    }
+    
+</style>
