--- a/snippets/product-all-in-one-easy.liquid
+++ b/snippets/product-all-in-one-easy.liquid
@@ -3,6 +3,7 @@
         <div class="sub-title">
           <h3><b>As easy as 1, 2, 3!</b></h3>         
         </div>
+        <div class="easy-wrapper"></div>
     </div>
 </div>
 
@@ -20,6 +21,11 @@
       color: var(--dark-green);
       padding-bottom: 30px;
       text-align: center;
+    }
+
+    .easy-wrapper {
+        display: flex;
+        justify-content: center;
     }
 
 
