--- a/snippets/product-all-in-one-take-control.liquid
+++ b/snippets/product-all-in-one-take-control.liquid
@@ -11,7 +11,7 @@
    
       <div class="control-sub-wrapper"> 
       <div class="controller-text">
-        Join our 30 day challenge and watch your confidence, determination, and control soar! With our easy-to-use, clinically backed supplement Curalin, delicious meal plan, enjoyable movement regime, and 24/7 support team, your glucose will stay in check. But you won’t stop there! You will feel better, have more energy, and finally be in the driver seat. 
+        Join our 30 day challenge and watch your confidence, determination, and control soar! With our easy-to-use, clinically backed supplement Curalin, delicious meal plan, enjoyable movement regime, and 24/7 support team, your glucose will stay in check. But you won’t stop there! You will feel better, have more energy, and finally be in the driver seat. <br>
        <b>Don't wait - a healthier you is a click away!</b> 
       </div>
       <div class="button-wrapper">
