--- a/templates/product.all-in-one-thirty-day.liquid
+++ b/templates/product.all-in-one-thirty-day.liquid
@@ -39,7 +39,7 @@
   {% render 'sale-banner', isOnlyLogo: true, desktopContent: "logo", mobileContent: "logo", bgColor: "green", logoFileName: "logo-white-black-friday.png" %}
   {% render 'product-all-in-one-cta-section-sliders', challenge_value: challenge_value, curaeats_value: curaeats_value %}
   {% render 'product-all-in-one-take-control', ctaButtonLink: "/collections/all", ctaTitle: "Join the Challenge!" %}
-  {% render 'product-all-in-one-easy' %}
+  {% render 'product-all-in-one-easy', ctaButtonLink: "/collections/all", ctaTitle: "Join the Challenge!" %}
   {% render 'product-thirty-day-video-reviews' %}
   {% render 'thirty-day-commitement' %}
   {% render 'product-all-in-one-thirty-day-money-back' %} 
