--- a/snippets/product-all-in-one-easy.liquid
+++ b/snippets/product-all-in-one-easy.liquid
@@ -45,11 +45,11 @@
     }
 
      .cta-btn {  
-      background: var(--dark-green);
-      border: 1px solid var(--dark-green);
+      background: #FFB22D;
+      border: 1px solid #FFB22D;
       font-weight: 700;
       font-size: clamp(14px, 2vw, 18px);
-      color: var(--white);
+      color: var(--dark-green);
       margin-left: unset;
       border-radius: 5px;
       padding: 15px 40px;
@@ -57,8 +57,9 @@
     }
 
     .cta-btn:hover {
-      background: #697938;
-      border: 1px solid  #697938;
+      background: #FFB22D;
+      border: 1px solid  #FFB22D;
+      color: #FFFFFF;
     }
 
 
