--- a/snippets/product-all-in-one-easy.liquid
+++ b/snippets/product-all-in-one-easy.liquid
@@ -40,8 +40,7 @@
 
     button-wrapper {
       display: flex;
-      justify-content: center;
-      padding: 20px 0 0;
+      padding: 20px 0;
     }
 
      .cta-btn {  
