--- a/snippets/product-all-in-one-easy.liquid
+++ b/snippets/product-all-in-one-easy.liquid
@@ -94,6 +94,12 @@
         .easy-img-mb {
             display: flex;
         }
+
+        .experience-text {
+            font-size: 19px;
+            line-height: 26px;
+            color: #000000;
+        }
       
     }
     
