--- a/snippets/product-all-in-one-easy.liquid
+++ b/snippets/product-all-in-one-easy.liquid
@@ -112,6 +112,8 @@
             font-size: 19px;
             line-height: 26px;
             color: #000000;
+            max-width: unset;
+            padding: 30px 20px;
         }
       
     }
