--- a/snippets/product-all-in-one-easy.liquid
+++ b/snippets/product-all-in-one-easy.liquid
@@ -71,6 +71,7 @@
     .experience-wrapper {
         display: flex;
         justify-content: flex-end;
+        gap: 30px;
     }
 
     .experience-text {
