--- a/snippets/product-all-in-one-easy.liquid
+++ b/snippets/product-all-in-one-easy.liquid
@@ -84,8 +84,10 @@
         flex-direction: column;
         justify-content: center;
         text-align: center;
-        max-width: 35%;
-        padding: 30px 40px 0;
+    }
+
+    .curalin-img {
+        width: 60%;
     }
 
 
@@ -116,6 +118,11 @@
             max-width: unset;
             padding: 30px 20px;
         }
+
+        .curalin-img {
+            width: unset;
+        }
+    
       
     }
     
