--- a/snippets/product-all-in-one-easy.liquid
+++ b/snippets/product-all-in-one-easy.liquid
@@ -47,7 +47,8 @@
 
     .button-wrapper {
       display: flex;
-      padding: 20px 0;
+      padding: 35px 0;
+      justify-content: flex-start;
     }
 
      .cta-btn {  
