--- a/snippets/product-all-in-one-easy.liquid
+++ b/snippets/product-all-in-one-easy.liquid
@@ -84,7 +84,7 @@
         color: #404733;
         flex-direction: column;
         justify-content: center;
-        text-align: center;
+        max-width: 30%;
     }
 
     .curalin-img {
@@ -113,6 +113,8 @@
         }
 
         .experience-text {
+            max-width: unset;
+            text-align: center;
             font-size: 19px;
             line-height: 26px;
             color: #000000;
