--- a/snippets/product-all-in-one-easy.liquid
+++ b/snippets/product-all-in-one-easy.liquid
@@ -45,13 +45,13 @@
         display: none;
     }
 
-    .button-wrapper {
+    .easy .container .button-wrapper {
       display: flex;
       padding: 35px 0;
       justify-content: flex-start;
     }
 
-     .cta-btn {  
+     .easy .container .cta-btn {  
       background: #FFB22D;
       border: 1px solid #FFB22D;
       font-weight: 700;
@@ -63,7 +63,7 @@
 
     }
 
-    .cta-btn:hover {
+    .easy .container .cta-btn:hover {
       background: #FFB22D;
       border: 1px solid  #FFB22D;
       color: #FFFFFF;
