--- a/snippets/product-all-in-one-easy.liquid
+++ b/snippets/product-all-in-one-easy.liquid
@@ -8,8 +8,7 @@
             <img class="easy-img-mb" src="{{ 'thirty-day-product-easy-group-mb.png' | asset_url }}" width="362" height="593" alt="">
         </div>
         <div class="button-wrapper">
-            {% render 'product-all-in-one-back-to-top' %}
-        {% comment %} <a class="cta-btn" href="{{ ctaButtonLink }}">{{ ctaTitle }}</a> {% endcomment %}
+        <a class="cta-btn" href="{{ ctaButtonLink }}">{{ ctaTitle }}</a>
         </div>
        
     </div>
