--- a/snippets/product-all-in-one-back-to-top.liquid
+++ b/snippets/product-all-in-one-back-to-top.liquid
@@ -1,4 +1,9 @@
+
+{% if thirtyDays %}
+<a id="back-to-top-btn">Join the Challenge!</a>
+{% else %}
 <a id="back-to-top-btn">Try CuraLin</a>
+{% endif %}
 
 
 <style>
