--- a/templates/product.all-in-one-thirty-day.liquid
+++ b/templates/product.all-in-one-thirty-day.liquid
@@ -43,7 +43,7 @@
   {% render 'product-thirty-day-video-reviews' %}
   {% render 'thirty-day-commitement' %}
   {% render 'product-all-in-one-thirty-day-money-back' %} 
-  {% render 'product-all-in-one-back-to-top' %}
+  {% render 'product-all-in-one-back-to-top', thirtyDays: true %}
 </div>
 
 <style>
