--- a/snippets/product-all-in-one-back-to-top.liquid
+++ b/snippets/product-all-in-one-back-to-top.liquid
@@ -20,7 +20,7 @@
 
  #back-to-top-btn {
       font-size: 30px;
-      padding: 7px 20px;
+      padding: 0 20px;
       font-weight: bold;
       height: 50px;
       text-align: center;
