--- a/snippets/product-all-in-one-take-control.liquid
+++ b/snippets/product-all-in-one-take-control.liquid
@@ -15,7 +15,7 @@
        <b>Don't wait - a healthier you is a click away!</b> 
       </div>
       <div class="button-wrapper">
-      <a class="cta-btn" href="{{ ctaButtonLink }}">{{ ctaTitle }}</a>
+        <a class="cta-btn" id="back-to-top-btn">{{ ctaTitle }}</a>
       </div>
       </div>
     </div>
@@ -126,3 +126,37 @@
 
 
 </style>
+
+
+<script>
+
+  $('#back-to-top-btn').click(function() {
+  woopra.track('Scroll To Top Click', {});
+  });
+  // Back To Top Button
+  var btn = $('#back-to-top-btn');
+
+  $(window).scroll(function() {
+    if ($(window).scrollTop() > 600) {
+      btn.addClass('show');
+      if (screen.width < 760) {
+        $('.helpButton').attr('style', 'bottom: 60px !important');
+      }
+    }
+    else {
+      btn.removeClass('show');
+      if (screen.width < 760) {
+        $('.helpButton').attr('style', 'bottom: 4px !important');
+      }
+    }
+  });
+
+  btn.on('click', function(e) {
+    e.preventDefault();
+    $('html, body').animate({scrollTop:0}, '300');
+  });
+  {%- comment -%}
+  if($(".variant-box").last()) {
+    $(".main-slider-vector-bg").hide();
+  } {%- endcomment -%}
+</script>
