--- a/snippets/thirty-day-product-challenge-section.liquid
+++ b/snippets/thirty-day-product-challenge-section.liquid
@@ -166,6 +166,10 @@
       padding: 0 15px;
     }
 
+    #product-feature-section .container .all-features-wrapper {
+          flex-direction: column;
+    }
+
     #product-feature-section .features {
       max-width: unset;
       width: 100%;
