--- a/snippets/thirty-day-product-challenge-section.liquid
+++ b/snippets/thirty-day-product-challenge-section.liquid
@@ -64,7 +64,7 @@
     line-height: 1.2em;
   }
 
-  #product-feature-section .container .all-features-wrapper {
+  .all-features-wrapper {
         display: flex;
   }
 
@@ -166,7 +166,7 @@
       padding: 0 15px;
     }
 
-    #product-feature-section .container .all-features-wrapper {
+     .all-features-wrapper {
           flex-direction: column;
     }
 
