--- a/snippets/thirty-day-product-challenge-section.liquid
+++ b/snippets/thirty-day-product-challenge-section.liquid
@@ -66,6 +66,7 @@
 
   .all-features-wrapper {
         display: flex;
+        justify-content: space-around;
   }
 
 
@@ -81,7 +82,6 @@
  
 
   #product-feature-section .features {
-    max-width: 45%;
     display: flex;
     flex-direction: column;
   }
@@ -167,7 +167,7 @@
     }
 
      .all-features-wrapper {
-          flex-direction: column;
+         flex-direction: column;
     }
 
     #product-feature-section .features {
