--- a/snippets/thirty-day-product-challenge-section.liquid
+++ b/snippets/thirty-day-product-challenge-section.liquid
@@ -66,7 +66,7 @@
 
   .all-features-wrapper {
         display: flex;
-        justify-content: space-around;
+        justify-content: space-between;
   }
 
 
