--- a/snippets/thirty-day-product-challenge-section.liquid
+++ b/snippets/thirty-day-product-challenge-section.liquid
@@ -35,13 +35,17 @@
         {% for feature in features %}
           <div class="feature">
             <div class="feature-icon"><i class="icofont-check"></i></div>
-            <div class="feature-text">{{ feature | split: ":" | first }}</div>
-            {% assign price = feature | split: ":" | last %}
-            {% if price == '0' %}
-            <div class="feature-price priceless">Priceless</div>
-            {% else %}
-            <div class="feature-price">{{ price | times: 100 | money_without_trailing_zeros }}<sup>00</sup> Value</div>
-            {% endif %}
+            <div class="text-features">
+              <div class="feature-text">{{ feature | split: ":" | first }}</div>
+              {% assign price = feature | split: ":" | last %}
+              {% if price == '0' %}
+              <div class="feature-price priceless">Priceless</div>
+              {% else %}
+              <div class="feature-price">{{ price | times: 100 | money_without_trailing_zeros }}<sup>00</sup> Value</div>
+              {% endif %}
+            </div>
+            
+            
           </div>
           {% assign total = total | plus: price %}
         {% endfor %}
@@ -115,7 +119,10 @@
     margin-right: 20px;
   }
 
-
+.text-features {
+  display: flex;
+  flex-direction: column;
+}
   #product-feature-section .features .feature .feature-text {
     display: flex;
     flex-direction: column;
