--- a/snippets/thirty-day-product-challenge-section.liquid
+++ b/snippets/thirty-day-product-challenge-section.liquid
@@ -134,6 +134,7 @@
 
   #product-feature-section .features .feature .feature-price { 
     color: #95A157;
+    padding-top: 5px;
   }
 
 
@@ -154,12 +155,7 @@
  
 
 
-  @media screen and (max-width: 898px) {
-    #product-feature-section .features .feature .feature-price {
-      width: 73px;
-  
-    }
-  }
+
 
   @media screen and (max-width: 768px) {
     #product-feature-section .container {
@@ -180,37 +176,7 @@
       padding-right: 92px;
     }
 
-    #product-feature-section .features .feature .feature-price {
-      width: 9vw;
-    }
-
-  
-
-  
   }
 
-  @media screen and (max-width: 627px) {
-    #product-feature-section .features .feature .feature-price {
-        width: 11vw;
-    }
-  }
-
-  @media screen and (max-width: 513px) {
-    #product-feature-section .features .feature .feature-price {
-        width: 13vw;
-    }
-  }
-
-  @media screen and (max-width: 434px) {
-    #product-feature-section .features .feature .feature-price {
-        width: 15vw;
-    }
-  }
-
-  @media screen and (max-width: 376px) {
-    #product-feature-section .features .feature .feature-price {
-        width: 18vw;
-    }
-  }
 </style>
 
