--- a/snippets/thirty-day-product-challenge-section.liquid
+++ b/snippets/thirty-day-product-challenge-section.liquid
@@ -1,12 +1,15 @@
 
 
-{% assign features = "<b>30 day supply of Curalin</b> (180 capsules):75
-|<b>30 day mouth-watering meal plan</b> including recipes and videos:29
-|<b>14 day easy-to-do movement and exercise plan</b> with videos:59
-|<b>Blood Sugar Explained</b> In Plain English (infographic):14
-|<b>Curalife Blood Sugar Healthy Cookbook</b>:40
-|<b>Free Shipping </b>:8
-|<b>Community support</b> with 100K+ peers:0|<b>24/7 Customer Support</b> (phone, email, or live chat):0" | split: "|" %}
+{% assign features = "<b>30 day supply of Curalin</b> (180 capsules):75*thirty-day-product-chalenge-01.png
+|<b>30 day mouth-watering meal plan</b> including recipes and videos:29*thirty-day-product-chalenge-02.png
+|<b>14 day easy-to-do movement and exercise plan</b> with videos:59*thirty-day-product-chalenge-03.png
+|<b>Blood Sugar Explained</b> In Plain English (infographic):14*thirty-day-product-chalenge-04.png
+" | split: "|" %}
+{% assign features_1 = "<b>30 day supply of Curalin</b> (180 capsules):75*thirty-day-product-chalenge-05.png
+|<b>30 day mouth-watering meal plan</b> including recipes and videos:29*thirty-day-product-chalenge-06.png
+|<b>14 day easy-to-do movement and exercise plan</b> with videos:59*thirty-day-product-chalenge-07.png
+|<b>Blood Sugar Explained</b> In Plain English (infographic):14*thirty-day-product-chalenge-08.png
+" | split: "|" %}
 
 <section id="product-feature-section">
   <div class="container">
@@ -36,7 +39,7 @@
     <div class="features-wrapper">
       <div class="features">
         {% assign total = 0 %}
-        {% for feature in features %}
+        {% for feature in features_1 %}
           <div class="feature">
             <div class="feature-icon"><i class="icofont-check"></i></div>
             <div class="text-features">
