--- a/snippets/thirty-day-product-challenge-section.liquid
+++ b/snippets/thirty-day-product-challenge-section.liquid
@@ -22,14 +22,14 @@
             <div class="feature-icon"><i class="icofont-check"></i></div>
             <div class="text-features">
               <div class="feature-text">{{ feature | split: ":" | first }}</div>
-              {% assign price = feature | split: ":" | last %}
+              {% assign price = feature | split: ":" | last | split: "*" | first %}
               {% if price == '0' %}
               <div class="feature-price priceless">Priceless</div>
               {% else %}
               <div class="feature-price">a {{ price | times: 100 | money_without_trailing_zeros }} Value</div>
               {% endif %}
             </div>
-
+            <img class="feature-img" src="{{ feature | file_url | split: ":" | last | split: "*" | last }}" alt="">
 
           </div>
           {% assign total = total | plus: price %}
@@ -39,21 +39,23 @@
     <div class="features-wrapper">
       <div class="features">
         {% assign total = 0 %}
-        {% for feature in features_1 %}
-          <div class="feature">
-            <div class="feature-icon"><i class="icofont-check"></i></div>
-            <div class="text-features">
-              <div class="feature-text">{{ feature | split: ":" | first }}</div>
-              {% assign price = feature | split: ":" | last %}
-              {% if price == '0' %}
-              <div class="feature-price priceless">Priceless</div>
-              {% else %}
-              <div class="feature-price">a {{ price | times: 100 | money_without_trailing_zeros }} Value</div>
-              {% endif %}
-            </div>           
-          </div>
-          {% assign total = total | plus: price %}
-        {% endfor %}
+       {% for feature in features_1 %}
+         <div class="feature">
+           <div class="feature-icon"><i class="icofont-check"></i></div>
+           <div class="text-features">
+             <div class="feature-text">{{ feature | split: ":" | first }}</div>
+             {% assign price = feature | split: ":" | last | split: "*" | first %}
+             {% if price == '0' %}
+             <div class="feature-price priceless">Priceless</div>
+             {% else %}
+             <div class="feature-price">a {{ price | times: 100 | money_without_trailing_zeros }} Value</div>
+             {% endif %}
+           </div>
+           <img class="feature-img" src="{{ feature | file_url | split: ":" | last | split: "*" | last }}" alt="">
+
+         </div>
+         {% assign total = total | plus: price %}
+       {% endfor %}
       </div>
     </div>
     </div>
