--- a/snippets/thirty-day-product-challenge-section.liquid
+++ b/snippets/thirty-day-product-challenge-section.liquid
@@ -142,7 +142,12 @@
     padding-top: 5px;
   }
 
+#product-feature-section .features .feature .feature-img {
+  width: 89px;
+  position: absolute;
+  right: 0;
 
+}
   
 
 
