--- a/snippets/thirty-day-product-challenge-section.liquid
+++ b/snippets/thirty-day-product-challenge-section.liquid
@@ -51,7 +51,7 @@
              <div class="feature-price">a {{ price | times: 100 | money_without_trailing_zeros }} Value</div>
              {% endif %}
            </div>
-           <img class="feature-img" src="{{ feature | asset_url | split: ':' | last | split: '*' | last }}" width="92" height="92" alt="">
+           <img class="feature-img" src="{{ feature | asset_url | split: ':' | last | split: '*' | last }}"  alt="">
 
          </div>
          {% assign total = total | plus: price %}
