--- a/snippets/thirty-day-product-challenge-section.liquid
+++ b/snippets/thirty-day-product-challenge-section.liquid
@@ -101,7 +101,6 @@
     position: relative;
     display: flex;
     align-items: center;
-    border-bottom: 1px solid #D9D9D9;
     padding: 15px 0;
     font-family: "PP Radio Grotesk";
     font-size: clamp(14px, 2vw, 20px);
@@ -109,10 +108,7 @@
    
   }
 
-  #product-feature-section .features .feature:nth-child(8) {
-    border-bottom: unset;
-  }
-
+ 
   #product-feature-section .features .feature .feature-icon {
     background: var(--light-green);
     color: white;
@@ -143,10 +139,10 @@
   }
 
 #product-feature-section .features .feature .feature-img {
-  width: 92px;
+  width: 75px;
   position: absolute;
   right: 0;
-  top:0;
+  top: 15px;
 
 }
   
