--- a/snippets/thirty-day-product-challenge-section.liquid
+++ b/snippets/thirty-day-product-challenge-section.liquid
@@ -1,6 +1,6 @@
 
 
-{% assign features = "<b>30 day supply of Curalin</b> (180 capsules):75*thirty-day-product-chalenge-01.png
+{% assign features = "<b>30 day supply of Curalin</b> (180 capsules):75*bottle-01.png
 |<b>30 day mouth-watering meal plan</b> including recipes and videos:29*thirty-day-product-chalenge-02.png
 |<b>14 day easy-to-do movement and exercise plan</b> with videos:59*thirty-day-product-chalenge-03.png
 |<b>Blood Sugar Explained</b> In Plain English (infographic):14*thirty-day-product-chalenge-04.png
