--- a/snippets/thirty-day-product-challenge-section.liquid
+++ b/snippets/thirty-day-product-challenge-section.liquid
@@ -1,14 +1,14 @@
 
 
-{% assign features = "<b>30 day supply of Curalin</b> (180 capsules):75@thirty-day-product-chalenge-01.png
-|<b>30 day mouth-watering meal plan</b> including recipes and videos:29@thirty-day-product-chalenge-02.png
-|<b>14 day easy-to-do movement and exercise plan</b> with videos:59@thirty-day-product-chalenge-03.png
-|<b>Blood Sugar Explained</b> In Plain English (infographic):14@thirty-day-product-chalenge-04.png
+{% assign features = "<b>30 day supply of Curalin</b> (180 capsules):75*thirty-day-product-chalenge-01.png
+|<b>30 day mouth-watering meal plan</b> including recipes and videos:29*thirty-day-product-chalenge-02.png
+|<b>14 day easy-to-do movement and exercise plan</b> with videos:59*thirty-day-product-chalenge-03.png
+|<b>Blood Sugar Explained</b> In Plain English (infographic):14*thirty-day-product-chalenge-04.png
 " | split: "|" %}
-{% assign features_1 = "<b>Curalife Blood Sugar Healthy Cookbook</b>:40@thirty-day-product-chalenge-05.png
-|<b>Free Shipping </b>:8@thirty-day-product-chalenge-06.png
-|<b>Community support</b> with 100K+ peers:0@thirty-day-product-chalenge-07.png
-|<b>24/7 Customer Support</b> (phone, email, or live chat):0@thirty-day-product-chalenge-08.png
+{% assign features_1 = "<b>Curalife Blood Sugar Healthy Cookbook</b>:40*thirty-day-product-chalenge-05.png
+|<b>Free Shipping </b>:8*thirty-day-product-chalenge-06.png
+|<b>Community support</b> with 100K+ peers:0*thirty-day-product-chalenge-07.png
+|<b>24/7 Customer Support</b> (phone, email, or live chat):0*thirty-day-product-chalenge-08.png
 " | split: "|" %}
 
 <section id="product-feature-section">
@@ -22,14 +22,14 @@
             <div class="feature-icon"><i class="icofont-check"></i></div>
             <div class="text-features">
               <div class="feature-text">{{ feature | split: ":" | first }}</div>
-              {% assign price = feature | split: ":" | last | split: "@" | first %}
+              {% assign price = feature | split: ":" | last | split: "*" | first %}
               {% if price == '0' %}
               <div class="feature-price priceless">Priceless</div>
               {% else %}
               <div class="feature-price">a {{ price | times: 100 | money_without_trailing_zeros }} Value</div>
               {% endif %}
             </div>
-            <img class="feature-img" src="{{ feature | asset_url | split: "@" | last | split: "@" | last}}" width="92" height="92" alt="">
+            <img class="feature-img" src="{{ feature | asset_url | split: ":" | last | split: "*" | last}}" width="92" height="92" alt="">
 
           </div>
           {% assign total = total | plus: price %}
@@ -44,14 +44,14 @@
            <div class="feature-icon"><i class="icofont-check"></i></div>
            <div class="text-features">
              <div class="feature-text">{{ feature | split: ":" | first }}</div>
-             {% assign price = feature | split: ":" | last | split: "@" | first %}
+             {% assign price = feature | split: ":" | last | split: "*" | first %}
              {% if price == '0' %}
              <div class="feature-price priceless">Priceless</div>
              {% else %}
              <div class="feature-price">a {{ price | times: 100 | money_without_trailing_zeros }} Value</div>
              {% endif %}
            </div>
-           <img class="feature-img" src="{{ feature | asset_url | split: ':' | last | split: '@' | last }}" width="92" height="92" alt="">
+           <img class="feature-img" src="{{ feature | asset_url | split: ':' | last | split: '*' | last }}" width="92" height="92" alt="">
 
          </div>
          {% assign total = total | plus: price %}
