--- a/snippets/product-all-in-one-how-it-works.liquid
+++ b/snippets/product-all-in-one-how-it-works.liquid
@@ -3,7 +3,7 @@
         <div class="sub-title">
           <h3><b>How the 30 day challenge works:</b></h3>         
         </div>
-        <div class="sub-text"></div>
+        <div class="sub-text">Each week, we’ll conquer a new health habit together!</div>
      
       
     </div>
@@ -32,6 +32,15 @@
       color: var(--dark-green);
       padding-bottom: 30px;
       text-align: center;
+    }
+
+    .how-work .sub-text {
+      font-family: 'DM Sans';
+      font-weight: 500;
+      font-size: 20px;
+      line-height: 28px;
+      text-align: center;
+      color: #404733;
     }
 
    
@@ -67,9 +76,15 @@
           line-height: 35px;
         }
 
+        .how-work .sub-text {
+          font-size: 20px;
+          line-height: 28px;
+          color: #000000;
+        }
+
   
         .how-work-wrapper {
-            flex-direction: column-reverse;
+            flex-direction: column;
         }
 
         .how-work-text {
