--- a/templates/product.all-in-one-thirty-day.liquid
+++ b/templates/product.all-in-one-thirty-day.liquid
@@ -24,6 +24,7 @@
   {% render 'thirty-day-product-challenge-section' %}
   {% render 'product-all-in-one-take-control', ctaTitle: "Join the Challenge!" %}
   {% render 'product-all-in-one-easy', ctaTitle: "Join the Challenge!" %}
+  {% render 'product-all-in-one-how-it-works' %}
   {% render 'product-thirty-day-video-reviews' %}
   {% render 'thirty-day-commitement' %}
   {% render 'product-all-in-one-thirty-day-money-back' %} 
