--- a/snippets/product-all-in-one-how-it-works.liquid
+++ b/snippets/product-all-in-one-how-it-works.liquid
@@ -26,12 +26,13 @@
 
     .how-work .sub-title h3 {
       font-family: 'PP Radio Grotesk';
+      font-style: normal;
       font-weight: 700;
-      font-size: 60px;
-      line-height: 35px;
-      color: var(--dark-green);
-      padding-bottom: 30px;
+      font-size: 40px;
+      line-height: 30px;
       text-align: center;
+      letter-spacing: -0.01em;
+      color: #404733;
     }
 
     .how-work .sub-text {
