--- a/snippets/product-all-in-one-how-it-works.liquid
+++ b/snippets/product-all-in-one-how-it-works.liquid
@@ -8,9 +8,7 @@
       
     </div>
     <div class="how-work-wrapper">
-        <div class="how-work-text">Experience the benefits of Curalin, the 100% natural and advanced solution for maintaining healthy glucose levels. With a powerful blend of 9 herbs, Curalin supports 18 key body functions to help you feel your best. Made with clean, potent ingredients, Curalin is the safe and effective choice for optimal glucose support. Say goodbye to unpredictability and hello to a healthy, natural way to support your glucose levels. <br>
-
-       <b>Don't settle for less, choose Curalin for the best results.</b></div>
+        <div class="how-work-text"></div>
       
     </div>
 </div>
@@ -73,8 +71,8 @@
     @media screen and (max-width: 768px) {
         
         .how-work .sub-title h3 {
-          font-size: 32px;
-          line-height: 35px;
+          font-size: 28px;
+          line-height: 30px;
         }
 
         .how-work .sub-text {
