--- a/snippets/product-all-in-one-how-it-works.liquid
+++ b/snippets/product-all-in-one-how-it-works.liquid
@@ -1,7 +1,7 @@
 <div class="how-work">
     <div class="container">
         <div class="sub-title">
-          <h3><b>How the 30 day challenge works:</b></h3>         
+          How the 30 day challenge works:         
         </div>
         <div class="sub-text">Each week, we’ll conquer a new health habit together!</div>
      
@@ -22,7 +22,7 @@
       padding-top: 60px;
     }
 
-    .how-work .sub-title h3 {
+    .how-work .sub-title  {
       font-family: 'PP Radio Grotesk';
       font-style: normal;
       font-weight: 700;
@@ -70,7 +70,7 @@
 
     @media screen and (max-width: 768px) {
         
-        .how-work .sub-title h3 {
+        .how-work .sub-title  {
           font-size: 28px;
           line-height: 30px;
         }
