--- a/snippets/product-all-in-one-how-it-works.liquid
+++ b/snippets/product-all-in-one-how-it-works.liquid
@@ -1,3 +1,13 @@
+{% assign weeks = "Week 1
+Mindful Munching:Access your new meal plan with tons of new recipes that don’t compromise flavor!
+|Week 2
+Supplement Savvy:Start adding Curalin to your regime. We’ll guide you through it every step of the way!
+|Week 3
+Find your Flow:Add in a movement routine that works for YOU! Go at your own pace, from the comfortability of your home. It’s doable, maintainable, and even enjoyable!
+|Week 4
+Small Steps, Big Wins:Set yourself up for success! Learn the health habits that allow you to maintain what you learned over the 30 days. You’re only just beginning.
+" | split: "|" %}
+
 <div class="how-work">
     <div class="container">
         <div class="sub-title">
@@ -8,7 +18,12 @@
       
     </div>
     <div class="how-work-wrapper">
-        <div class="how-work-text"></div>
+      {% for week in weeks %}
+        <div class="how-work-text">
+          <div class="week-title">{{ week | split: ":" | first }}</div>
+          <div class="border-bottom-week"></div>
+          <div class="week-text">{{ week | split: ":" | last }}</div>
+        </div>
       
     </div>
 </div>
@@ -57,14 +72,9 @@
 
     .how-work-text {
         display: flex;
-        font-family: 'DM Sans';
-        font-weight: 500;
-        font-size: 20px;
-        line-height: 28px;
-        color: #404733;
         flex-direction: column;
         justify-content: center;
-        max-width: 30%;
+        
     }
 
 
@@ -88,12 +98,6 @@
         }
 
         .how-work-text {
-            max-width: unset;
-            text-align: center;
-            font-size: 19px;
-            line-height: 26px;
-            color: #000000;
-            max-width: unset;
             padding: 30px 20px;
         }
 
