--- a/snippets/product-all-in-one-how-it-works.liquid
+++ b/snippets/product-all-in-one-how-it-works.liquid
@@ -77,6 +77,16 @@ Small Steps, Big Wins:Set yourself up for success! Learn the health habits that 
         
     }
 
+    .week-title {
+      font-family: 'PP Radio Grotesk';
+      font-weight: 700;
+      font-size: 28px;
+      line-height: 35px;
+      letter-spacing: -0.01em;
+      color: #9EB069;
+      max-width: 200px;
+    }
+
 
 
     @media screen and (max-width: 768px) {
