--- a/snippets/product-all-in-one-how-it-works.liquid
+++ b/snippets/product-all-in-one-how-it-works.liquid
@@ -24,6 +24,7 @@ Small Steps, Big Wins:Set yourself up for success! Learn the health habits that 
           <div class="border-bottom-week"></div>
           <div class="week-text">{{ week | split: ":" | last }}</div>
         </div>
+      {% endfor %}
       
     </div>
 </div>
