--- a/snippets/product-all-in-one-how-it-works.liquid
+++ b/snippets/product-all-in-one-how-it-works.liquid
@@ -1,10 +1,10 @@
-{% assign weeks = "Week 1
+{% assign weeks = "Week 1 <br>
 Mindful Munching:Access your new meal plan with tons of new recipes that don’t compromise flavor!
-|Week 2
+|Week 2<br>
 Supplement Savvy:Start adding Curalin to your regime. We’ll guide you through it every step of the way!
-|Week 3
+|Week 3<br>
 Find your Flow:Add in a movement routine that works for YOU! Go at your own pace, from the comfortability of your home. It’s doable, maintainable, and even enjoyable!
-|Week 4
+|Week 4<br>
 Small Steps, Big Wins:Set yourself up for success! Learn the health habits that allow you to maintain what you learned over the 30 days. You’re only just beginning.
 " | split: "|" %}
 
