--- a/snippets/product-all-in-one-how-it-works.liquid
+++ b/snippets/product-all-in-one-how-it-works.liquid
@@ -111,6 +111,12 @@ Small Steps, Big Wins:Set yourself up for success! Learn the health habits that 
             padding: 30px 20px;
         }
 
+        .week-title {
+          font-size: 30px;
+          line-height: 35px;
+          text-align: left;
+        }
+
       
     }
     
