--- a/snippets/product-all-in-one-how-it-works.liquid
+++ b/snippets/product-all-in-one-how-it-works.liquid
@@ -33,6 +33,8 @@ Small Steps, Big Wins:Set yourself up for success! Learn the health habits that 
 <style>
   .how-work {
     background: #F4F4DB;
+    margin-top: 50px;
+   
   }
     .how-work .sub-title {
       padding-top: 60px;
@@ -114,7 +116,6 @@ Small Steps, Big Wins:Set yourself up for success! Learn the health habits that 
         .week-title {
           font-size: 30px;
           line-height: 35px;
-          text-align: left;
         }
 
       
