--- a/snippets/product-all-in-one-how-it-works.liquid
+++ b/snippets/product-all-in-one-how-it-works.liquid
@@ -71,6 +71,7 @@ Small Steps, Big Wins:Set yourself up for success! Learn the health habits that 
         display: flex;
         justify-content: space-between;
         gap: 30px;
+        padding: 20px 50px;
     }
 
     .how-work-text {
