--- a/snippets/product-all-in-one-how-it-works.liquid
+++ b/snippets/product-all-in-one-how-it-works.liquid
@@ -61,12 +61,6 @@ Small Steps, Big Wins:Set yourself up for success! Learn the health habits that 
       padding-bottom: 30px;
     }
 
-   
-
-
-  
-
- 
     .how-work-wrapper {
         display: flex;
         justify-content: space-between;
@@ -90,7 +84,13 @@ Small Steps, Big Wins:Set yourself up for success! Learn the health habits that 
       color: #9EB069;
     }
 
-
+    .week-text {
+      font-family: 'DM Sans';
+      font-weight: 500;
+      font-size: 20px;
+      line-height: 25px;
+      color: #000000;
+    }
 
     @media screen and (max-width: 768px) {
         
