--- a/snippets/product-all-in-one-how-it-works.liquid
+++ b/snippets/product-all-in-one-how-it-works.liquid
@@ -119,6 +119,10 @@ Small Steps, Big Wins:Set yourself up for success! Learn the health habits that 
           line-height: 35px;
         }
 
+        .week-text { 
+          font-size: 19px;     
+        }
+
       
     }
     
