--- a/snippets/product-all-in-one-how-it-works.liquid
+++ b/snippets/product-all-in-one-how-it-works.liquid
@@ -70,7 +70,7 @@ Small Steps, Big Wins:Set yourself up for success! Learn the health habits that 
     .how-work-text {
         display: flex;
         flex-direction: column;
-        
+        max-width: 25%;     
     }
 
     .week-title {
@@ -106,6 +106,11 @@ Small Steps, Big Wins:Set yourself up for success! Learn the health habits that 
   
         .how-work-wrapper {
             flex-direction: column;
+        }
+
+        .how-work-text {
+           
+            max-width: unset;     
         }
 
 
