--- a/snippets/product-all-in-one-how-it-works.liquid
+++ b/snippets/product-all-in-one-how-it-works.liquid
@@ -63,7 +63,7 @@ Small Steps, Big Wins:Set yourself up for success! Learn the health habits that 
 
     .how-work-wrapper {
         display: flex;
-        gap: 30px;
+        gap: 1vw;
         padding: 20px 50px;
     }
 
@@ -76,8 +76,7 @@ Small Steps, Big Wins:Set yourself up for success! Learn the health habits that 
     .week-title {
       font-family: 'PP Radio Grotesk';
       font-weight: 700;
-      font-size: 28px;
-      line-height: 35px;
+      font-size: clamp(20px, 2vw, 28px);
       letter-spacing: -0.01em;
       color: #9EB069;
     }
@@ -85,7 +84,7 @@ Small Steps, Big Wins:Set yourself up for success! Learn the health habits that 
     .week-text {
       font-family: 'DM Sans';
       font-weight: 500;
-      font-size: 20px;
+      font-size: clamp(10px, 2vw, 20px);
       line-height: 25px;
       color: #000000;
     }
