--- a/snippets/product-all-in-one-how-it-works.liquid
+++ b/snippets/product-all-in-one-how-it-works.liquid
@@ -80,6 +80,10 @@ Small Steps, Big Wins:Set yourself up for success! Learn the health habits that 
       color: #9EB069;
     }
 
+    .border-bottom-week {
+      border-bottom: 2px solid #B9C86B;
+    }
+
     .week-text {
       font-family: 'DM Sans';
       font-weight: 500;
