--- a/snippets/product-all-in-one-how-it-works.liquid
+++ b/snippets/product-all-in-one-how-it-works.liquid
@@ -81,7 +81,9 @@ Small Steps, Big Wins:Set yourself up for success! Learn the health habits that 
     }
 
     .border-bottom-week {
+      padding: 20px;
       border-bottom: 2px solid #B9C86B;
+      max-width: 100px;
     }
 
     .week-text {
