--- a/snippets/product-all-in-one-how-it-works.liquid
+++ b/snippets/product-all-in-one-how-it-works.liquid
@@ -83,10 +83,11 @@ Small Steps, Big Wins:Set yourself up for success! Learn the health habits that 
     .border-bottom-week {
       padding: 20px;
       border-bottom: 2px solid #B9C86B;
-      max-width: 100px;
+      max-width: 150px;
     }
 
     .week-text {
+      padding-top: 20px;
       font-family: 'DM Sans';
       font-weight: 500;
       font-size: clamp(10px, 2vw, 20px);
