--- a/snippets/product-all-in-one-how-it-works.liquid
+++ b/snippets/product-all-in-one-how-it-works.liquid
@@ -87,7 +87,7 @@ Small Steps, Big Wins:Set yourself up for success! Learn the health habits that 
     }
 
     .week-text {
-      padding-top: 20px;
+      padding: 20px 0;
       font-family: 'DM Sans';
       font-weight: 500;
       font-size: clamp(10px, 2vw, 20px);
