--- a/snippets/thirty-day-product-challenge-section.liquid
+++ b/snippets/thirty-day-product-challenge-section.liquid
@@ -52,7 +52,7 @@
              {% endif %}
            </div>
            
-            <img class="feature-img" src="{{ 'thirty-day-product-challenge-05' | asset_url | split: ':' | last | split: '*' | last }}" width="92" height="92" alt=""> 
+            <img class="feature-img" src="{{ 'thirty-day-product-challenge-05.png' | asset_url | split: ':' | last | split: '*' | last }}" width="92" height="92" alt=""> 
          </div>
        
        {% endfor %}
