--- a/snippets/product-all-in-one-how-it-works.liquid
+++ b/snippets/product-all-in-one-how-it-works.liquid
@@ -34,8 +34,20 @@ Small Steps, Big Wins:Set yourself up for success! Learn the health habits that 
       
     </div>
 </div>
-
 <style>
+  @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,800');
+
+
+
+  
+
+  body {
+   
+    speak: normal;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+  }
+
   .list-ic a {
     color: #788288;
     text-decoration: none;
