--- a/snippets/product-all-in-one-how-it-works.liquid
+++ b/snippets/product-all-in-one-how-it-works.liquid
@@ -61,11 +61,11 @@ Small Steps, Big Wins:Set yourself up for success! Learn the health habits that 
     color: white;
     position: relative;
   }
-  .list-ic li::before {
+  .list-ic li::after {
     content: '';
     position: absolute;
     background: #18bc9c;
-    
+    z-index: -1;
   }
   .list-ic.horizontal li {
     display: inline-block;
